syntax = "proto3"

message PlayerInput {
    int32 player_id = 1;
    uint8 input = 2;
}

message Point {
    float x = 1;
    float y = 2;
}

message ServerPlayerOutput {
    Point position = 1;
    Point cannon_position = 2;
}

message ServerControllerOutput {
    repeated PlayerOutput outputs = 1;
}